I have solved the spacing problem

--- a/style.css
+++ b/style.css
@@ -6,10 +6,8 @@ body{
 /*das Logo und die entdecke Seite*/
 .Navigation-Leiste{
     display: flex;
-    justify-items: center;
+    justify-content: space-between;
     align-items: center;
-    height: 80px;
-    width: 100px;
 }
 
 .Logo_and_Entdecken{
@@ -37,7 +35,7 @@ body{
 /*Links zu den Weiteren Angeboten*/
 .Links_zu_den_Weiteren_Angeboten{
     display: flex;
-    justify-items: center;
+    justify-content: center;
     align-items: center;
 }
 
